United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6780143 hs203t003 hits SIGSEGV/EXCEPTION_ACCESS_VIOLATION with -XX:+UseCompressedOops
6780143 : hs203t003 hits SIGSEGV/EXCEPTION_ACCESS_VIOLATION with -XX:+UseCompressedOops

Details
Type:
Bug
Submit Date:
2008-12-03
Status:
Closed
Updated Date:
2012-10-01
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
jvmti
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs14
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
Another interesting entry from my nightly analysis report:

New nsk.jvmti failures (from 2008.08.06)
    nsk/jvmti/scenarios/hotswap/HS203/hs203t003
        This test failed due to SIGSEGV on Solaris AMD64 Server VM
        (machine vm-v20z-6) and due to EXCEPTION_ACCESS_VIOLATION on
        Win-AMD64 Server VM (machine intelsdv14). This test is covered
        by the following bug:

            6545967 4/4 sp05t003 failed ResumeThread() due to
                        THREAD_NOT_SUSPENDED

        However, the bug describes a different failure mode.

        Update: I think this new crash mode only occurs with AMD64
            and the -XX:+UseCompressedOops option.

        Last failure on 2008.11.28 with Solaris AMD64 Server VM (machine vm-v20z-12) and Win-AMD64 Server VM (machine intelsdv14)
        Previous failure on 2008.11.26 with Solaris AMD64 Server VM (machine colfax002) and Win-AMD64 Server VM (machine vm-x2200-02)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/0fc262af204f
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/0fc262af204f
                                     
2010-12-10
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/0fc262af204f
                                     
2010-12-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/0fc262af204f
                                     
2010-11-30
EVALUATION

Better summary:

Summary: Using r12 as temporary register around call_VM trashes heapbase becausecall_VM doesn't always return immediately to following code (eg forward_exception, popframe and early return support).
                                     
2010-11-30
EVALUATION

Summary: missing reinit_heapbase() when popframe support jumps back into interpreter from C code.
                                     
2010-11-18



Hardware and Software, Engineered to Work Together